[package]
name = "torii-translate"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }
dialoguer = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dirs = "6"
anyhow = "1"
console = "0.16"
indicatif = "0.18"
